# mcpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TESTING.md
.github/workflows/: test.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md
.planning/phases/01-protocol-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md  01-06-PLAN.md  01-06-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-UAT.md  01-VERIFICATION.md
.planning/phases/02-core-server/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-05-PLAN.md  02-05-SUMMARY.md  02-06-PLAN.md  02-06-SUMMARY.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/02-core-server**---tools,-resources,-prompts-with-stdio-transport-and-progress-support/: 02-CONTEXT.md
.planning/phases/03-client-capabilities/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-05-PLAN.md  03-05-SUMMARY.md  03-06-PLAN.md  03-06-SUMMARY.md  03-07-PLAN.md  03-07-SUMMARY.md  03-08-PLAN.md  03-08-SUMMARY.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-advanced-features--http-transport/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-04-PLAN.md  04-04-SUMMARY.md  04-05-PLAN.md  04-05-SUMMARY.md  04-06-PLAN.md  04-06-SUMMARY.md  04-RESEARCH.md  04-VERIFICATION.md
.planning/phases/04-advanced-features-http-transport/: 04-CONTEXT.md
.planning/phases/05-content-&-tasks**---rich-content-types,-annotations,-pagination,-experimental-tasks/: 05-CONTEXT.md
.planning/phases/05-content---tasks/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-04-PLAN.md  05-04-SUMMARY.md  05-RESEARCH.md  05-VERIFICATION.md
.planning/phases/06-high-level-api/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-03-PLAN.md  06-03-SUMMARY.md  06-04-PLAN.md  06-04-SUMMARY.md  06-05-PLAN.md  06-05-SUMMARY.md  06-06-PLAN.md  06-06-SUMMARY.md  06-07-PLAN.md  06-07-SUMMARY.md  06-CONTEXT.md  06-RESEARCH.md  06-VERIFICATION.md
.planning/phases/07-build-validation/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02a-PLAN.md  07-02a-SUMMARY.md  07-02b-PLAN.md  07-02b-SUMMARY.md  07-03-PLAN.md  07-03-SUMMARY.md  07-04-PLAN.md  07-04-SUMMARY.md  07-05-PLAN.md  07-05-SUMMARY.md  07-CONTEXT.md  07-RESEARCH.md  07-VERIFICATION.md
.planning/phases/08-bug-fix-foundation/: 08-01-PLAN.md  08-01-SUMMARY.md  08-02-PLAN.md  08-02-SUMMARY.md  08-CONTEXT.md  08-RESEARCH.md  08-VERIFICATION.md
.planning/phases/09-inspector-server-integration/: 09-01-PLAN.md  09-01-SUMMARY.md  09-02-PLAN.md  09-02-SUMMARY.md  09-03-PLAN.md  09-03-SUMMARY.md  09-CONTEXT.md  09-RESEARCH.md  09-VERIFICATION.md
.planning/phases/10-automated-cli-testing/: 10-01-PLAN.md  10-01-SUMMARY.md  10-02-PLAN.md  10-02-SUMMARY.md  10-03-PLAN.md  10-03-SUMMARY.md  10-04-PLAN.md  10-04-SUMMARY.md  10-05-PLAN.md  10-05-SUMMARY.md  10-06-PLAN.md  10-06-SUMMARY.md  10-RESEARCH.md  10-VERIFICATION.md
.planning/phases/11-documentation/: 11-01-PLAN.md  11-01-SUMMARY.md  11-02-PLAN.md  11-02-SUMMARY.md  11-CONTEXT.md  11-RESEARCH.md  11-documentation-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  FEATURES_V11_INSPECTOR.md  PITFALLS.md  STACK.md  SUMMARY.md
.serena/: project.yml
cmake/: mcppConfig.cmake.in
examples/: CMakeLists.txt  TESTING.md  echo_server.cpp  http_server_integration.cpp  inspector_server.cpp  mcp.json  stdio_client.cpp
include/mcpp/: mcpp.h
include/mcpp/core/: json_rpc_message.h  protocol_version.h
include/mcpp/model/: notification.h  request.h  response.h
include/mcpp/transport/: stdio_transport.h  transport.h
include/mcpp/utils/: error.h  logger.h
scripts/: README.md  comprehensive_test.sh  simple_test.sh  update_paths.sh
src/core/: json_rpc_message.cpp  protocol_version.cpp
src/mcpp/: client.cpp  client.h  client_blocking.h
src/mcpp/api/: context.h  peer.h  role.h  running_service.h  service.h
src/mcpp/async/: callbacks.h  timeout.cpp  timeout.h
src/mcpp/client/: cancellation.cpp  cancellation.h  elicitation.cpp  elicitation.h  future_wrapper.cpp  future_wrapper.h  roots.cpp  roots.h  sampling.cpp  sampling.h
src/mcpp/content/: content.cpp  content.h  pagination.h
src/mcpp/core/: error.h  json_rpc.cpp  json_rpc.h  request_tracker.cpp  request_tracker.h
src/mcpp/protocol/: capabilities.h  initialize.h  types.h
src/mcpp/server/: mcp_server.cpp  mcp_server.h  prompt_registry.cpp  prompt_registry.h  request_context.cpp  request_context.h  resource_registry.cpp  resource_registry.h  task_manager.cpp  task_manager.h  tool_registry.cpp  tool_registry.h
src/mcpp/transport/: http_transport.cpp  http_transport.h  null_transport.h  stdio_transport.cpp  stdio_transport.h  transport.h
src/mcpp/util/: atomic_id.h  error.cpp  error.h  logger.cpp  logger.h  pagination.h  retry.h  sse_formatter.h  uri_template.h
src/model/: notification.cpp  request.cpp  response.cpp
src/transport/: stdio_transport.cpp
src/utils/: error.cpp  logger.cpp
tests/: CMakeLists.txt
tests/cli/: 01-tools-list.bats  02-tools-call.bats  03-resources.bats  04-prompts.bats  05-initialize.bats  06-lifecycle.bats
tests/cli/test_helper/: common-setup.bash  common-setup.sh
tests/compliance/: test_jsonrpc_spec.cpp
tests/fixtures/: common.h
tests/integration/: test_client_server.cpp
tests/unit/: test_json_rpc.cpp  test_pagination.cpp  test_prompt_registry.cpp  test_request_tracker.cpp  test_resource_registry.cpp  test_timeout_manager.cpp  test_tool_registry.cpp
